--- a/#source/footer.html
+++ b/#source/footer.html
@@ -4,24 +4,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -70,29 +70,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
