--- a/#source/projects__slider.html
+++ b/#source/projects__slider.html
@@ -10,14 +10,14 @@
                     <div class="item__box">
                         <h4 class="item__title">Red Finger Building</h4>
                         <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                        <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                     </div>
                 </div>
                 <div class="projects__item-2">
                     <div class="item__box">
                         <h4 class="item__title">Cubes Building</h4>
                         <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -26,7 +26,7 @@
                     <div class="item__box">
                         <h4 class="item__title">The Pencil Building</h4>
                         <p class="item__text">Stores & Malls</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -39,14 +39,14 @@
                     <div class="item__box">
                         <h4 class="item__title">Modern Cottage</h4>
                         <p class="item__text">Private houses</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                        <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                     </div>
                 </div>
                 <div class="projects__item-5">
                     <div class="item__box">
                         <h4 class="item__title">Luxury Beach House</h4>
                         <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -55,7 +55,7 @@
                     <div class="item__box">
                         <h4 class="item__title">Modern Double Bedroom</h4>
                         <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -68,7 +68,7 @@
                     <div class="item__box">
                         <h4 class="item__title">Kids Bedroom With Decorations</h4>
                         <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -77,7 +77,7 @@
                     <div class="item__box">
                         <h4 class="item__title">Scandinavian Style Interior</h4>
                         <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
@@ -86,7 +86,7 @@
                     <div class="item__box">
                         <h4 class="item__title">Brown and Gray Painted House</h4>
                         <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
+                        <a href="cottage.html">
                             <button class="orange__button">VIEW PROJECT</button>
                         </a>
                     </div>
