--- a/#source/supported_companies.html
+++ b/#source/supported_companies.html
@@ -1,9 +1,9 @@
 <h2 class="supported__title">Supported by 12+ partners</h2>
 <ul class="supported__list">
-    <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo.png" alt="InDepth logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo3.png" alt="happy home logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo4.png" alt="forsale logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
 </ul>
