--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/contacts.css">
-    <title>Main page</title>
+    <link rel="stylesheet" href="css/contacts.css">
+    <title>Contacts page</title>
 </head>
 <body>
 
@@ -23,10 +23,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -66,7 +66,7 @@
                     <h1 class="our__title">Contact us</h1>
                     <p class="our__text">Please complete the form. Detailed information will help us to make a tuned offer.</p>
                     <div class="contacts__area">
-                        <img src="/img/contacts/image.jpg" alt="">
+                        <img src="img/contacts/image.jpg" alt="">
                         <div class="contacts__wrapper">
                             <form action="" class="contacts__form">
                                 <div class="form__box">
@@ -170,11 +170,11 @@
                 </div>
                 <h2 class="offices__title-socials">Find us at</h2>
                 <div class="offices__socials">
-                    <a href="#"><img src="/img/contacts/Whatsapp.png" alt=""></a>
-                    <a href="#"><img src="/img/contacts/Messanger.png" alt=""></a>
-                    <a href="#"><img src="/img/contacts/Facebook.png" alt=""></a>
-                    <a href="#"><img src="/img/contacts/Twitter.png" alt=""></a>
-                    <a href="#"><img src="/img/contacts/YouTube.png" alt=""></a>
+                    <a href="#"><img src="img/contacts/Whatsapp.png" alt=""></a>
+                    <a href="#"><img src="img/contacts/Messanger.png" alt=""></a>
+                    <a href="#"><img src="img/contacts/Facebook.png" alt=""></a>
+                    <a href="#"><img src="img/contacts/Twitter.png" alt=""></a>
+                    <a href="#"><img src="img/contacts/YouTube.png" alt=""></a>
                 </div>
             </div>
         </section>
@@ -222,24 +222,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -288,29 +288,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
