--- a/cottage.html
+++ b/cottage.html
@@ -6,10 +6,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cottage.css">
-    <script src="/js/cottage__slider.js" defer></script>
-    <script src="/js/projects_slider.js" defer></script>
-    <title>Main page</title>
+    <link rel="stylesheet" href="css/cottage.css">
+    <script src="js/cottage__slider.js" defer></script>
+    <script src="js/projects_slider.js" defer></script>
+    <title>Cottage</title>
 </head>
 <body>
 
@@ -26,10 +26,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -69,30 +69,30 @@
 
                             <div class="arrows">
                                 <div class="arrow__left" id="left__arrow">
-                                    <img src="/img/cottage/Left.png" alt="">
+                                    <img src="img/cottage/Left.png" alt="">
                                 </div>
                                 <div class="arrow__right" id="right__arrow">
-                                    <img src="/img/cottage/Right.png" alt="">
+                                    <img src="img/cottage/Right.png" alt="">
                                 </div>
                             </div>
 
-                            <div class="slide s1"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
-                            <div class="slide"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
-                            <div class="slide"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
-                            <div class="slide"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
-                            <div class="slide"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
-                            <div class="slide"><img src="/img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide s1"><img src="img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide"><img src="img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide"><img src="img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide"><img src="img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide"><img src="img/cottage/image.jpg" alt="cottage image"></div>
+                            <div class="slide"><img src="img/cottage/image.jpg" alt="cottage image"></div>
 
                         </div>
                     </div>
                     <div class="slider__nav">
 
-                        <label for="r1" class="bar"><img src="/img/cottage/image (1).jpg" alt="cottage image"></label>
-                        <label for="r2" class="bar"><img src="/img/cottage/slider.jpg" alt="cottage image"></label>
-                        <label for="r3" class="bar"><img src="/img/cottage/slider1.jpg" alt="cottage image"></label>
-                        <label for="r4" class="bar"><img src="/img/cottage/slider2.jpg" alt="cottage image"></label>
-                        <label for="r5" class="bar"><img src="/img/cottage/slider3.jpg" alt="cottage image"></label>
-                        <label for="r6" class="bar"><img src="/img/cottage/slider4.jpg" alt="cottage image"></label>
+                        <label for="r1" class="bar"><img src="img/cottage/image (1).jpg" alt="cottage image"></label>
+                        <label for="r2" class="bar"><img src="img/cottage/slider.jpg" alt="cottage image"></label>
+                        <label for="r3" class="bar"><img src="img/cottage/slider1.jpg" alt="cottage image"></label>
+                        <label for="r4" class="bar"><img src="img/cottage/slider2.jpg" alt="cottage image"></label>
+                        <label for="r5" class="bar"><img src="img/cottage/slider3.jpg" alt="cottage image"></label>
+                        <label for="r6" class="bar"><img src="img/cottage/slider4.jpg" alt="cottage image"></label>
                     </div>
 
                     <div class="description__goal">
@@ -131,7 +131,7 @@
         <section class="decisions__section">
             <div class="container">
                 <div class="decisions__box">
-                    <img src="/img/cottage/image (2).jpg" alt="builder image">
+                    <img src="img/cottage/image (2).jpg" alt="builder image">
                     <div class="decisions__area">
                         <h2 class="decisions__title">Constructive decisions</h2>
                         <ul class="decisions__list">
@@ -153,10 +153,10 @@
                         <h2 class="projects__title">Similar projects</h2>
                         <div class="arrow__box">
                             <div class="arrow__left" id="projects__left-arrow">
-                                <img src="../img/main/Line(Stroke).png" alt="line left">
+                                <img src="img/main/Line(Stroke).png" alt="line left">
                             </div>
                             <div class="arrow__right active" id="projects__right-arrow">
-                                <img src="../img/main/Line(right).png" alt="line right">
+                                <img src="img/main/Line(right).png" alt="line right">
                             </div>
                         </div>
                     </div>
@@ -173,14 +173,14 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Luxury Beach House</h4>
                                             <p class="item__text">Private Houses</p>
-                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                            <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                                         </div>
                                     </div>
                                     <div class="projects__item-2">
                                         <div class="item__box">
                                             <h4 class="item__title">Brown and Gray Painted House</h4>
                                             <p class="item__text">Private Houses</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -189,7 +189,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Scandinavian Style Interior</h4>
                                             <p class="item__text">Private Houses</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -202,14 +202,14 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Modern Cottage</h4>
                                             <p class="item__text">Private houses</p>
-                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                            <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                                         </div>
                                     </div>
                                     <div class="projects__item-5">
                                         <div class="item__box">
                                             <h4 class="item__title">Kids Bedroom With Decorations</h4>
                                             <p class="item__text">Apartments & flats</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -218,7 +218,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Modern Double Bedroom</h4>
                                             <p class="item__text">Apartments & flats</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -231,7 +231,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Red Finger Building</h4>
                                             <p class="item__text">Business Centers</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -240,7 +240,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Cubes Building</h4>
                                             <p class="item__text">Business Centers</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -249,7 +249,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">The Pencil Building</h4>
                                             <p class="item__text">Stores & Malls</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -261,7 +261,7 @@
                     
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
-                        <a href="/work.html">
+                        <a href="work.html">
                             <button class="orange__button">VIEW PORTFOLIO</button>
                         </a>
                     </div>
@@ -313,24 +313,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -379,29 +379,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
