--- a/infrastructure.html
+++ b/infrastructure.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/infrastructure.css">
-    <title>Main page</title>
+    <link rel="stylesheet" href="css/infrastructure.css">
+    <title>Infrastructure</title>
 </head>
 <body>
 
@@ -23,10 +23,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -58,16 +58,16 @@
                         <div class="description__news">
                             <p class="item__text orange">Industry News</p>
                             <hr>
-                            <img src="/img/infrastructure/Clock.png" alt="">
+                            <img src="img/infrastructure/Clock.png" alt="">
                             <p class="item__text">June 24, 2020</p>
                             <hr>
-                            <img src="../img/main/Chat.svg" alt="chat img">
+                            <img src="img/main/Chat.svg" alt="chat img">
                             <p class="item__text">No comments</p>
                         </div>
                         <div class="description__socials">
-                            <a href="#"><img src="/img/infrastructure/Facebook.png" alt=""></a>
-                            <a href="#"><img src="/img/infrastructure/Linked-In.png" alt=""></a>
-                            <a href="#"><img src="/img/infrastructure/Twitter.png" alt=""></a>
+                            <a href="#"><img src="img/infrastructure/Facebook.png" alt=""></a>
+                            <a href="#"><img src="img/infrastructure/Linked-In.png" alt=""></a>
+                            <a href="#"><img src="img/infrastructure/Twitter.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
         </section>
         <section class="news__section">
             <div class="container">
-                <img class="news__shift" src="/img/infrastructure/image.jpg" alt="">
+                <img class="news__shift" src="img/infrastructure/image.jpg" alt="">
                 <div class="news__wrapper">
                     <div class="news__box">
                         <h3>Vulputate vitae pellentesque scelerisque 
@@ -117,9 +117,9 @@
                     </div>
                     <div class="news__share">
                         <h6>Share :</h6>
-                        <a href="#"><img src="/img/infrastructure/Facebook.png" alt=""></a>
-                        <a href="#"><img src="/img/infrastructure/Linked-In.png" alt=""></a>
-                        <a href="#"><img src="/img/infrastructure/Twitter.png" alt=""></a>
+                        <a href="#"><img src="img/infrastructure/Facebook.png" alt=""></a>
+                        <a href="#"><img src="img/infrastructure/Linked-In.png" alt=""></a>
+                        <a href="#"><img src="img/infrastructure/Twitter.png" alt=""></a>
                     </div>
                     <div class="news__comments">
                         <h2>4 comments</h2>
@@ -136,7 +136,7 @@
                                         felis sed urna aliquet. Suspendisse fames egestas sed duis purus diam et.
                                     </p>
                                     <div class="comments__reply">
-                                        <img src="/img/infrastructure/share-arrow.svg" alt="">
+                                        <img src="img/infrastructure/share-arrow.svg" alt="">
                                         <p>Reply</p>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                         Facilisis praesent urna sed rhoncus quis pharetra pellentesque erat sagittis.
                                     </p>
                                     <div class="comments__reply">
-                                        <img src="/img/infrastructure/share-arrow.svg" alt="">
+                                        <img src="img/infrastructure/share-arrow.svg" alt="">
                                         <p>Reply</p>
                                     </div>
                                 </div>
@@ -168,7 +168,7 @@
                                         ultricies at adipiscing mauris nunc. Fames faucibus nisl duis id diam.
                                     </p>
                                     <div class="comments__reply">
-                                        <img src="/img/infrastructure/share-arrow.svg" alt="">
+                                        <img src="img/infrastructure/share-arrow.svg" alt="">
                                         <p>Reply</p>
                                     </div>
                                 </div>
@@ -185,7 +185,7 @@
                                          egestas congue nibh dui a nulla.
                                     </p>
                                     <div class="comments__reply">
-                                        <img src="/img/infrastructure/share-arrow.svg" alt="">
+                                        <img src="img/infrastructure/share-arrow.svg" alt="">
                                         <p>Reply</p>
                                     </div>
                                 </div>
@@ -261,24 +261,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -327,29 +327,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
