--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/news.css">
+    <link rel="stylesheet" href="css/news.css">
     <title>Main page</title>
 </head>
 <body>
@@ -23,10 +23,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -72,10 +72,10 @@
                 </ul>
                 <div class="categories__cards">
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image(5).png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image(5).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">How to Build Climate Change-Resilient Infrastructure</a>
+                                <a href="infrastructure.html">How to Build Climate Change-Resilient Infrastructure</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Industry News</p>
@@ -83,7 +83,7 @@
                                 <p class="item__text">June 24, 2020</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">4 comments</p>
                                 </div>
                             </div>
@@ -95,10 +95,10 @@
                     </div>
                     
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image.png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image.png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">How Construction Can Help Itself</a>
+                                <a href="infrastructure.html">How Construction Can Help Itself</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Innovation</p>
@@ -106,7 +106,7 @@
                                 <p class="item__text">June 12, 2020</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">No comments</p>
                                 </div>
                             </div>
@@ -119,10 +119,10 @@
                     </div>
 
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image(1).png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image(1).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">The Difference Between a Digger and an Excavator</a>
+                                <a href="infrastructure.html">The Difference Between a Digger and an Excavator</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Expert Tips</p>
@@ -130,7 +130,7 @@
                                 <p class="item__text">May 16, 2020</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">No comments</p>
                                 </div>
                             </div>
@@ -143,10 +143,10 @@
                     </div>
 
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image(2).png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image(2).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">Building Construction Hand Tools</a>
+                                <a href="infrastructure.html">Building Construction Hand Tools</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Expert Tips</p>
@@ -154,7 +154,7 @@
                                 <p class="item__text">February 25, 2020</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">1 comment</p>
                                 </div>
                             </div>
@@ -166,10 +166,10 @@
                     </div>
 
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image(3).png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image(3).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">Top 10 Construction Trends</a>
+                                <a href="infrastructure.html">Top 10 Construction Trends</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Industry News</p>
@@ -177,7 +177,7 @@
                                 <p class="item__text">January 14, 2020</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">No comments</p>
                                 </div>
                             </div>
@@ -189,10 +189,10 @@
                     </div>
 
                     <div class="categories__item">
-                        <a href="/infrastructure.html"><img src="../img/news/image(4).png" alt="card image"></a>
+                        <a href="infrastructure.html"><img src="img/news/image(4).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
-                                <a href="/infrastructure.html">Types of Flooring Materials</a>
+                                <a href="infrastructure.html">Types of Flooring Materials</a>
                             </h5>
                             <div class="item__info">
                                 <p class="item__text">Company News</p>
@@ -200,7 +200,7 @@
                                 <p class="item__text">December 1, 2019</p>
                                 <hr>
                                 <div class="item__social">
-                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <img src="img/main/Chat.svg" alt="chat img">
                                     <p class="item__text">No comments</p>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                     <li>2</li>
                     <li>3</li>
                     <li>4</li>
-                    <li><img src="/img/news/Right.svg" alt=""></li>
+                    <li><img src="img/news/Right.svg" alt=""></li>
                 </ul>
             </div>
         </section>
@@ -264,24 +264,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -330,29 +330,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
