--- a/positions.html
+++ b/positions.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/positions.css">
-    <script src="/js/modals.js" defer></script>
-    <title>Main page</title>
+    <link rel="stylesheet" href="css/positions.css">
+    <script src="js/modals.js" defer></script>
+    <title>Positions</title>
 </head>
 <body>
 
@@ -23,10 +23,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -66,10 +66,10 @@
                         <div class="vacancy__item">
                             <div class="item__divisor">
                                 <div class="item__info">
-                                    <img src="/img/positions/outline.svg" alt="">
+                                    <img src="img/positions/outline.svg" alt="">
                                     <p class="item__text">New York</p>
                                     <hr>
-                                    <img src="/img/positions/Clock.svg" alt="">
+                                    <img src="img/positions/Clock.svg" alt="">
                                     <p class="item__text">Full Time</p>
                                 </div>
                                 <h3 class="item__title">Heavy Equipment Operator</h3>
@@ -79,10 +79,10 @@
                         <div class="vacancy__item">
                             <div class="item__divisor">
                                 <div class="item__info">
-                                    <img src="/img/positions/outline.svg" alt="">
+                                    <img src="img/positions/outline.svg" alt="">
                                     <p class="item__text">San Francisco</p>
                                     <hr>
-                                    <img src="/img/positions/Clock.svg" alt="">
+                                    <img src="img/positions/Clock.svg" alt="">
                                     <p class="item__text">Full Time</p>
                                 </div>
                                 <h3 class="item__title">Financial Compliance Analyst</h3>
@@ -92,10 +92,10 @@
                         <div class="vacancy__item">
                             <div class="item__divisor">
                                 <div class="item__info">
-                                    <img src="/img/positions/outline.svg" alt="">
+                                    <img src="img/positions/outline.svg" alt="">
                                     <p class="item__text">New Jersey</p>
                                     <hr>
-                                    <img src="/img/positions/Clock.svg" alt="">
+                                    <img src="img/positions/Clock.svg" alt="">
                                     <p class="item__text">Full Time</p>
                                 </div>
                                 <h3 class="item__title">Project Manager - Buildings</h3>
@@ -105,10 +105,10 @@
                         <div class="vacancy__item">
                             <div class="item__divisor">
                                 <div class="item__info">
-                                    <img src="/img/positions/outline.svg" alt="">
+                                    <img src="img/positions/outline.svg" alt="">
                                     <p class="item__text">New York</p>
                                     <hr>
-                                    <img src="/img/positions/Clock.svg" alt="">
+                                    <img src="img/positions/Clock.svg" alt="">
                                     <p class="item__text">Part Time</p>
                                 </div>
                                 <h3 class="item__title">Environment Specialist</h3>
@@ -118,10 +118,10 @@
                         <div class="vacancy__item">
                             <div class="item__divisor">
                                 <div class="item__info">
-                                    <img src="/img/positions/outline.svg" alt="">
+                                    <img src="img/positions/outline.svg" alt="">
                                     <p class="item__text">New York</p>
                                     <hr>
-                                    <img src="/img/positions/Clock.svg" alt="">
+                                    <img src="img/positions/Clock.svg" alt="">
                                     <p class="item__text">Part Time</p>
                                 </div>
                                 <h3 class="item__title">Accountant</h3>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="our__cards">
                         <div class="our__item">
-                            <img src="../img/positions/ic-brain.svg" alt="contract image">
+                            <img src="img/positions/ic-brain.svg" alt="contract image">
                             <h4 class="our__subtitle">Training</h4>
                             <p class="our__subtext">Culpa nostrud commodo ea consequat aliquip reprehenderit. 
                                 Veniam velit nostrud aliquip sunt.
@@ -155,7 +155,7 @@
                         </div>
                         <hr>
                         <div class="our__item">
-                            <img src="../img/positions/ic-success.svg" alt="success image">
+                            <img src="img/positions/ic-success.svg" alt="success image">
                             <h4 class="our__subtitle">Professional Growth</h4>
                             <p class="our__subtext">Anim reprehenderit sint voluptate exercitation adipisicing 
                                 laborum adipisicing. Minim empor est ea.
@@ -163,7 +163,7 @@
                         </div>
                         <hr>
                         <div class="our__item">
-                            <img src="../img/positions/ic-budget.svg" alt="budget image">
+                            <img src="img/positions/ic-budget.svg" alt="budget image">
                             <h4 class="our__subtitle">Growing Salary</h4>
                             <p class="our__subtext">Sit veniam aute dolore adipisicing nulla sit culpa. 
                                 Minim mollit voluptate ullamco proident ea ad.
@@ -174,7 +174,7 @@
             </div>
             <div class="modal__bg" id="modal__subscribe">
                 <div class="modal__window">
-                    <img class="crosshair" id="modal__cross-1" src="/img/positions/Cross.svg" alt="">
+                    <img class="crosshair" id="modal__cross-1" src="img/positions/Cross.svg" alt="">
                     <h2 class="modal__title">Subscribe to our newsletter</h2>
                     <form action="" class="modal__form">
                         <div class="form__box">
@@ -192,7 +192,7 @@
 
             <div class="modal__bg" id="modal__cv">
                 <div class="modal__window">
-                    <img class="crosshair" id="modal__cross-2" src="/img/positions/Cross.svg" alt="">
+                    <img class="crosshair" id="modal__cross-2" src="img/positions/Cross.svg" alt="">
                     <h2 class="modal__title">Send your CV</h2>
                     <form action="" class="modal__form">
                         <div class="form__box">
@@ -226,7 +226,7 @@
                         </div>
                     </form>
                     <form action = "" class="upload__form">
-                        <label for="upload__btn"><img src="/img/positions/Attach.png" alt="">Attach your CV*</label>
+                        <label for="upload__btn"><img src="img/positions/Attach.png" alt="">Attach your CV*</label>
                         <input type="file" id="upload__btn" name = "upload__btn">
                     </form>
                     <button class="orange__button" type="submit" id="send__button-cv">SEND</button>
@@ -277,24 +277,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -343,29 +343,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
