--- a/services.html
+++ b/services.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/services.css">
-    <title>Main page</title>
+    <link rel="stylesheet" href="css/services.css">
+    <title>Services</title>
 </head>
 <body>
 
@@ -24,10 +24,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="examples__box">
                     <div class="examples__item">
-                        <img src="../img/services/image.jpg" alt="construction image">
+                        <img src="img/services/image.jpg" alt="construction image">
                         <div class="item__area">
                             <h3 class="item__title">Construction</h3>
                             <p class="item__text">Sapien, feugiat faucibus orci arcu, vulputate. 
@@ -75,7 +75,7 @@
                                 Mattis habitant venenatis, gravida posuere massa ac interdum. 
                                 Eget aliquam dignissim ut vestibulum. 
                             </p>
-                            <a href="/interior__design.html">
+                            <a href="interior__design.html">
                                 <button class="orange__button">LEARN MORE</button>
                             </a>
                         </div>
@@ -88,14 +88,14 @@
                                 Est nulla lectus purus tincidunt massa tortor. 
                                 Hendrerit vulputate elementum blandit massa vitae amet felis eget. 
                             </p>
-                            <a href="/interior__design.html">
+                            <a href="interior__design.html">
                                 <button class="orange__button">LEARN MORE</button>
                             </a>
                         </div>
-                        <img src="../img/services/image (1).jpg" alt="development image">
+                        <img src="img/services/image (1).jpg" alt="development image">
                     </div>
                     <div class="examples__item">
-                        <img src="../img/services/image (2).jpg" alt="design image">
+                        <img src="img/services/image (2).jpg" alt="design image">
                         <div class="item__area">
                             <h3 class="item__title">Interior Design</h3>
                             <p class="item__text">Eleifend orci massa et facilisis orci feugiat ac.
@@ -104,7 +104,7 @@
                                  Turpis enim arcu, amet donec massa pellentesque nulla duis. 
                                 Arcu dictum metus sed purus senectus faucibus eget elementum pretium. 
                             </p>
-                            <a href="/interior__design.html">
+                            <a href="interior__design.html">
                                 <button class="orange__button">LEARN MORE</button>
                             </a>
                         </div>
@@ -116,11 +116,11 @@
                                 Ac facilisi dictum commodo, tortor gravida pretium, orci. 
                                 Nunc sit sollicitudin id egestas mattis. Turpis viverra nec urna ultrices urna. 
                             </p>
-                            <a href="/interior__design.html">
+                            <a href="interior__design.html">
                                 <button class="orange__button">LEARN MORE</button>
                             </a>
                         </div>
-                        <img src="../img/services/image (3).jpg" alt="repairs image">
+                        <img src="img/services/image (3).jpg" alt="repairs image">
                     </div>
                 </div>
             </div>
@@ -169,24 +169,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -235,29 +235,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
