--- a/#source/header.html
+++ b/#source/header.html
@@ -7,10 +7,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
