--- a/#source/supported_clients.html
+++ b/#source/supported_clients.html
@@ -1,7 +1,7 @@
 <div class="supported__content">
     <div class="supported__block">
         <h2 class="supported__title">What our clients are saying</h2>
-        <img src="../img/main/profile-image.png" alt="profile photo">
+        <img src="img/main/profile-image.png" alt="profile photo">
         <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
             Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
             laboris cillum laboris voluptate minim proident exercitation ullamco. 
@@ -12,10 +12,10 @@
                 <p>Position, Company name</p>
             </div>
             <div class="supported__arrows">
-                <img src="../img/main/prev-btn.png" alt="left arrow">
-                <img src="../img/main/hover.png" alt="right arrow">
+                <img src="img/main/prev-btn.png" alt="left arrow">
+                <img src="img/main/hover.png" alt="right arrow">
             </div>
         </div>
     </div>
-    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
+    <img class="shift__img" src="img/main/builders.jpg" alt="builders image">
 </div>
