--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -87,10 +87,10 @@
                     </div>
                     <div class="bureau__video">
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                            <img src="../img/main/large.svg" alt="play image">
+                            <img src="img/main/large.svg" alt="play image">
                         </a>
                         <div class="bureau__circle">
-                            <img src="../img/main/off.svg" alt="sound off image">
+                            <img src="img/main/off.svg" alt="sound off image">
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="our__cards">
                         <div class="our__item">
-                            <img src="../img/main/ic-like.svg" alt="like img">
+                            <img src="img/main/ic-like.svg" alt="like img">
                             <h4 class="our__subtitle">Quality</h4>
                             <p class="our__subtext">Culpa nostrud commodo ea consequat 
                                 aliquip reprehenderit. Veniam velit nostrud aliquip sunt.
@@ -111,7 +111,7 @@
                         </div>
                         <hr>
                         <div class="our__item">
-                            <img src="../img/main/ic-hand.svg" alt="like img">
+                            <img src="img/main/ic-hand.svg" alt="like img">
                             <h4 class="our__subtitle">Safety</h4>
                             <p class="our__subtext">Anim reprehenderit sint voluptate 
                                 exercitation adipisicing laborum adipisicing. Minim empor est ea.
@@ -119,7 +119,7 @@
                         </div>
                         <hr>
                         <div class="our__item">
-                            <img src="../img/main/ic-slippers.svg" alt="like img">
+                            <img src="img/main/ic-slippers.svg" alt="like img">
                             <h4 class="our__subtitle">Comfort</h4>
                             <p class="our__subtext">Sit veniam aute dolore adipisicing nulla sit culpa. 
                                 Minim mollit voluptate ullamco proident ea ad.
@@ -163,19 +163,19 @@
                     </div>
                     <div class="services__cards">
                         <div class="services__item">
-                            <img src="../img/main/ic-construction.png" alt="construction img">
+                            <img src="img/main/ic-construction.png" alt="construction img">
                             <h4 class="item__title">Construction</h4>
                         </div>
                         <div class="services__item">
-                            <img src="../img/main/ic-plan.svg" alt="plan img">
+                            <img src="img/main/ic-plan.svg" alt="plan img">
                             <h4 class="item__title">Project Development</h4>
                         </div>
                         <div class="services__item active">
-                            <img src="../img/main/ic-pantone.png" alt="pantone img">
+                            <img src="img/main/ic-pantone.png" alt="pantone img">
                             <h4 class="item__title">Interior Design</h4>
                         </div>
                         <div class="services__item">
-                            <img src="../img/main/ic-painting.svg" alt="painting img">
+                            <img src="img/main/ic-painting.svg" alt="painting img">
                             <h4 class="item__title">Repairs</h4>
                         </div>
                     </div>
@@ -195,10 +195,10 @@
                         </h2>
                         <div class="arrow__box">
                             <div class="arrow__left" id="projects__left-arrow">
-                                <img src="../img/main/Line(Stroke).png" alt="line left">
+                                <img src="img/main/Line(Stroke).png" alt="line left">
                             </div>
                             <div class="arrow__right active" id="projects__right-arrow">
-                                <img src="../img/main/Line(right).png" alt="line right">
+                                <img src="img/main/Line(right).png" alt="line right">
                             </div>
                         </div>
                     </div>
@@ -313,17 +313,17 @@
                 <div class="supported__box">
 <h2 class="supported__title">Supported by 12+ partners</h2>
 <ul class="supported__list">
-    <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo.png" alt="InDepth logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo3.png" alt="happy home logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo4.png" alt="forsale logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
 </ul>                </div>
 <div class="supported__content">
     <div class="supported__block">
         <h2 class="supported__title">What our clients are saying</h2>
-        <img src="../img/main/profile-image.png" alt="profile photo">
+        <img src="img/main/profile-image.png" alt="profile photo">
         <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
             Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
             laboris cillum laboris voluptate minim proident exercitation ullamco. 
@@ -334,12 +334,12 @@
                 <p>Position, Company name</p>
             </div>
             <div class="supported__arrows">
-                <img src="../img/main/prev-btn.png" alt="left arrow">
-                <img src="../img/main/hover.png" alt="right arrow">
+                <img src="img/main/prev-btn.png" alt="left arrow">
+                <img src="img/main/hover.png" alt="right arrow">
             </div>
         </div>
     </div>
-    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
+    <img class="shift__img" src="img/main/builders.jpg" alt="builders image">
 </div>            </div>
         </section>
         <section class="facts__section">
@@ -349,19 +349,19 @@
                         <h2 class="facts__title">Some facts and figures</h2>
                         <ul class="facts__figures">
                             <li>
-                                <img src="../img/main/circle-progress.png" alt="98% satisfied clients">
+                                <img src="img/main/circle-progress.png" alt="98% satisfied clients">
                                 <p class="figures__text">Totally satisfied clients</p>
                             </li>
                             <li>
-                                <img src="../img/main/circle-progress (1).png" alt="20 years of expperience">
+                                <img src="img/main/circle-progress (1).png" alt="20 years of expperience">
                                 <p class="figures__text">Years of experience</p>
                             </li>
                             <li>
-                                <img src="../img/main/circle-progress (2).png" alt="9452 Working hours spent">
+                                <img src="img/main/circle-progress (2).png" alt="9452 Working hours spent">
                                 <p class="figures__text">Working hours spent</p>
                             </li>
                             <li>
-                                <img src="../img/main/circle-progress (3).png" alt="100% succeeded projects">
+                                <img src="img/main/circle-progress (3).png" alt="100% succeeded projects">
                                 <p class="figures__text">Succeeded projects</p>
                             </li>
                         </ul> 
@@ -371,7 +371,7 @@
                         <div class="facts__cards">
                             <div class="facts__item">
                                 <a href="/infrastructure.html">
-                                    <img src="../img/main/facts__card_2.jpg" alt="card image">
+                                    <img src="img/main/facts__card_2.jpg" alt="card image">
                                 </a>
                                 <div class="item__box">
                                     <a href="/infrastructure.html">
@@ -383,7 +383,7 @@
                                         <p class="item__text">June 24, 2020</p>
                                         <hr>
                                         <div class="item__social">
-                                            <img src="../img/main/Chat.svg" alt="chat img">
+                                            <img src="img/main/Chat.svg" alt="chat img">
                                             <p class="item__text">4 comments</p>
                                         </div>
                                     </div>
@@ -397,7 +397,7 @@
                             <div class="news__divisor">
                                 <div class="facts__item-mini">
                                     <a href="/infrastructure.html">
-                                        <img src="../img/main/facts__card_1.jpg" alt="card image">
+                                        <img src="img/main/facts__card_1.jpg" alt="card image">
                                     </a>
                                     <div class="item__box">
                                         <a href="/infrastructure.html">
@@ -409,7 +409,7 @@
                                             <p class="item__text">June 12, 2020</p>
                                             <hr>
                                             <div class="item__social">
-                                                <img src="../img/main/Chat.svg" alt="chat img">
+                                                <img src="img/main/Chat.svg" alt="chat img">
                                                 <p class="item__text">No comments</p>
                                             </div>
                                         </div>
@@ -417,7 +417,7 @@
                                 </div>
                                 <div class="facts__item-mini">
                                     <a href="/infrastructure.html">
-                                        <img src="../img/main/facts__card_3.jpg" alt="card image">
+                                        <img src="img/main/facts__card_3.jpg" alt="card image">
                                     </a>
                                     <div class="item__box">
                                         <a href="/infrastructure.html">
@@ -429,7 +429,7 @@
                                             <p class="item__text">December 1, 2019</p>
                                             <hr>
                                             <div class="item__social">
-                                                <img src="../img/main/Chat.svg" alt="chat img">
+                                                <img src="img/main/Chat.svg" alt="chat img">
                                                 <p class="item__text">No comments</p>
                                             </div>
                                         </div>
@@ -489,24 +489,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -555,29 +555,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
