--- a/work.html
+++ b/work.html
@@ -24,10 +24,10 @@
             <nav class="navbar">
                 <ul class="navbar__list">
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -183,7 +183,7 @@
 <div class="supported__content">
     <div class="supported__block">
         <h2 class="supported__title">What our clients are saying</h2>
-        <img src="../img/main/profile-image.png" alt="profile photo">
+        <img src="img/main/profile-image.png" alt="profile photo">
         <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
             Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
             laboris cillum laboris voluptate minim proident exercitation ullamco. 
@@ -194,12 +194,12 @@
                 <p>Position, Company name</p>
             </div>
             <div class="supported__arrows">
-                <img src="../img/main/prev-btn.png" alt="left arrow">
-                <img src="../img/main/hover.png" alt="right arrow">
+                <img src="img/main/prev-btn.png" alt="left arrow">
+                <img src="img/main/hover.png" alt="right arrow">
             </div>
         </div>
     </div>
-    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
+    <img class="shift__img" src="img/main/builders.jpg" alt="builders image">
 </div>                </div>
             </div>
         </section>
@@ -208,12 +208,12 @@
                 <div class="companies__box">
 <h2 class="supported__title">Supported by 12+ partners</h2>
 <ul class="supported__list">
-    <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo.png" alt="InDepth logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo3.png" alt="happy home logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo4.png" alt="forsale logo"></a></li>
+    <li><a href="#"><img src="img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
 </ul>                </div>
             </div>
         </section>
@@ -261,24 +261,24 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="/index.html">
-                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
+                        <a href="index.html">
+                            <img src="img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -327,29 +327,29 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="about.html"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
+                        <li><a href="services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="work.html"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/footer/Heart.svg" alt="heart image">
+                    <img src="img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/footer/up-btn.svg" alt="up button image">
+                    <img src="img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
